crates/autoresolve/tests/compile_fail/resolvable_missing_new.rs
use autoresolve_macros::resolvable;

struct Foo;

#[resolvable]
impl Foo {
    fn build() -> Self {
        Self
    }
}

fn main() {}
